added the handshake image

--- a/index.html
+++ b/index.html
@@ -184,5 +184,20 @@
     
 
     <br><br><br><br><br><br><br>
+
+
+
+
+
+    <section class="sk4">
+        <div class="sk4in">
+            <h1>I need Support</h1>
+            <p>If you find anything to suggest me , please write it down here. I will try my best to recover that</p>
+        </div>
+    </section>
+
+
+
+
 </body>
 </html>
